--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -12,16 +12,20 @@
   width: 100%;
 }
 
+.mb-10 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-12 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-16 {
   margin-bottom: 1rem;
 }
 
 .mb-24 {
   margin-bottom: 1.5rem;
-}
-
-.font-ibm {
-  font-family: 'IBMPlexMono', sans-serif !important;
 }
 
 .hidden {
