--- a/src/styles/_share.scss
+++ b/src/styles/_share.scss
@@ -4,16 +4,13 @@
   }
 }
 
-.processingItem {
+.animationBorder {
   position: relative;
   z-index: 0;
   width: 100%;
-  height: 400px;
-  margin: 20px;
-  border-radius: 4px;
+  height: 100%;
+  border-radius: 12px;
   overflow: hidden;
-  padding: 2rem;
-  color: #fff;
 
   *,
   *::before,
@@ -29,7 +26,6 @@
     top: -50%;
     width: 200%;
     height: 200%;
-    background-color: #000;
     background-repeat: no-repeat;
     background-position: 0 0;
     background-image: conic-gradient(
@@ -38,18 +34,18 @@
       transparent 30%
     );
     animation: rotate 3s linear infinite;
-    border-radius: 4px;
+    border-radius: 12px;
   }
 
   &::after {
     content: '';
     position: absolute;
     z-index: -1;
-    left: 2px;
-    top: 2px;
-    width: calc(100% - 4px);
-    height: calc(100% - 4px);
+    left: 1px;
+    top: 1px;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
     background: #000;
-    border-radius: 4px;
+    border-radius: 12px;
   }
 }
