--- a/src/components/NFTDisplayBox/styles.module.scss
+++ b/src/components/NFTDisplayBox/styles.module.scss
@@ -45,4 +45,18 @@
       display: none !important;
     }
   }
+
+  .txtPreview {
+    width: 100%;
+    height: 100%;
+    padding: 24px;
+    overflow: hidden;
+
+    .text {
+      font-size: 16px;
+      line-height: 1.5;
+      color: #fff;
+      font-family: 'Source Code Pro';
+    }
+  }
 }
