--- a/src/styles/_share.scss
+++ b/src/styles/_share.scss
@@ -45,7 +45,7 @@
     top: 1px;
     width: calc(100% - 2px);
     height: calc(100% - 2px);
-    background: #000;
+    background: transparent;
     border-radius: 12px;
   }
 }
