--- a/src/components/NFTDisplayBox/styles.module.scss
+++ b/src/components/NFTDisplayBox/styles.module.scss
@@ -1,11 +1,8 @@
 .wrapper {
   &_content {
-    // position: absolute;
     width: 100%;
-    // height: 100%;
-    // top: 0;
-    // left: 0;
     background-color: white;
+
     img {
       width: 100% !important;
     }
@@ -58,5 +55,18 @@
       color: #fff;
       font-family: 'Source Code Pro';
     }
+  }
+
+  .loadingWrapper {
+    min-height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .loadingText {
+    color: #fff;
+    text-align: center;
   }
 }
